<resources>
  <string name="app_name">Rehearsal Assistant</string>
  <string name="help">Instructions</string>
  <string name="new_run_title">%1$s - %2$s</string>
  <string name="new_session_title">Enter a title for the session and click one of the \'Create\' buttons.</string>
  <string name="project_manager_instructions">The Project Manager allows you to open, create, and manage projects, which you can use to organize your recordings. Two types of projects are supported - Memo and Session.\n\nMemo projects:\n* have a simple recording/playback interface\n*ideal for memos, reminders, etc.\n*can be designated for use with the Sound Recorder Widget\n\nSession projects:\n* organize recordings into sessions\n*timestamp relative to the beginning of the session.\n* intended for annotating events such as rehearsals, experiments, and training sessions.\n\nClick on a project to open it. Long-press to delete or designate for Sound Recorder Widget recordings (Memo projects only).\n\nAt this time, it is not possible to rename a project, or to move recordings between projects.\n\nYou can use the menu to create a new project, download the Sound Recorder Widget,or to review these instructions again.\n\n</string>
  <string name="record">Click to Record</string>
  <string name="recording_instructions">Click the button to start the session. Click again to start/stop each recording. Use the MENU to stop the session.</string>
  <string name="recording_instructions_started">Click the button to start/stop each recording. Use the MENU to stop the session.</string>
  <string name="session_instructions">A Session Project allows you to record voice/audio annotations in sessions, and time-stamps relative to the beginning of the session.\n\nClick\'Document New Session\' to create a new session and record annotations. You may also click on an existing session to review its annotations, or long-press for more options.\n\nYou can use the MENU to access the Project Manager.</string>
  <string name="session_no_session_instructions">Click below to document a new session.\n\nUse the menu to access instructions, adjust settings, or to access the Project Manager.</string>
  <string name="settings">Settings</string>
  <string name="simple_instructions">A Memo Project offers easy recording and playback of sound files.\n\nUse the record button to start / stop recording. Click on a recording to listen. Long-press to edit the recording\'s label, e-mail it, or delete it.\n\nUse the MENU to e-mail all of the recordings or to access the Project Manager.</string>
  <string name="simple_no_annotations_instructions">Click below to start / stop recording.\n\nUse the menu to access instructions, adjust settings, or to access the Project Manager.</string>
  <string name="start_session">Click to Start Session</string>
  <string name="stop_recording">Click to Stop Recording</string>
  <string name="playback_instructions">Click on an annotation below to listen. Long-press to edit the annotation\'s label, e-mail it, or delete it. Use the MENU to e-mail the session.</string>
  <string name="annotation_label_text">Enter a new label for the annotation</string>
  <string name="no_annotations">No annotations were recorded for this session.</string>
  <string name="license">Welcome to Rehearsal Assistant!\n\nBy using this application, you agree to the following license:\n\nAndroid Rehearsal Assistant\nCopyright © 2009 urbanSTEW and others\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nSee http://www.gnu.org/licenses/ for a full text of the license.\n\nSee http://urbanstew.org/rehearsalassistant/ for links to source code and documentation.\n\n</string>
  <string name="beta_warning">This software is in BETA status, which means you are likely to encounter problems during use.\n\nIf you experience problems or have any suggestions, please e-mail us at comments@urbanstew.org and we will try to fix the problem / incorporate your suggestions.\n\nThank you!\n\n</string>
  <string name="memo">Memo</string>
  <string name="my_memo_project">My Memo Project</string>
  <string name="memo_project">Memo Project</string>
  <string name="session">Session</string>
  <string name="session_project">Session Project</string>
  <string name="my_session_project">My Session Project</string>
  <string name="project_type">project type:</string>
  <string name="error_project_does_not_exist">ERROR: Rehearsal Assistant has attempted to access a project which does not exist.</string>
  <string name="doc_new_session">Document New Session</string>
  <string name="create_session">Create Session</string>
  <string name="create_and_start_session">Create and Start Session</string>
  <string name="memo_error">There was a problem opening a Memo Project.</string>
  <string name="warning">Warning</string>
  <string name="warning_erase_previous_recordings">This will erase all recordings made the previous time session was recorded.\n\nARE YOU SURE YOU WANT TO DO THIS?</string>
  <string name="warning_erase_current_recordings">&quot;This will erase all recordings in the session.\n\nARE YOU SURE YOU WANT TO DO THIS?&quot;</string>
  <string name="warning_mute">Warning: music volume is muted.  To increase the volume, use the volume adjustment buttons while playing a recording.</string>
  <string name="error_zip">Problem creating ZIP archive:</string>
  <string name="error_send">Unable to send message:</string>
  <string name="try_widget">Have you tried the new Sound Recorder Widget?  It allows you to start and stop recording right from your phone\'s home screen.</string>
  <string name="download_it">Download it!</string>
  <string name="market_start_error">Could not start the Market app to download.</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="dont_download">Don\'t download</string>
  <string name="contribute">Contribute</string>
  <string name="thank_using">Thank you for using Rehearsal Assistant!  If you are finding it useful, please consider contributing to the project.</string>
  <string name="find_how">Find out how</string>
  <string name="not_now">Not right now</string>
  <string name="license2">License</string>
  <string name="uncompressed_recording">Recent Updates</string>
  <string name="uncompressed_recording2">0.9.0\n\n&#x2022; More robust background recording / Sound Recorder Widget recording\n&#x2022; On Android 2.0 and higher, there is a notification whenever recording is taking place\n&#x2022; A new setting to keep the screen bright during recording\n\n0.8.5\n\n&#x2022; Bug fixes related to long recording\n&#x2022; E-mail settings include default recipients and subject\n&#x2022; Assigning a text label to a recording will rename the file on the SD card to match the label\n\n0.8.4\n\nPartial translations to German, Hungarian, and Slovak - if you want to help us translate to another language, please send us an e-mail (comments@urbanstew.org).\n\n0.8.3\n\nOpening/closing the keyboard or otherwise switching screen orientation no longer interrupts playback or recording (but keep in mind that it can still cause recording artifacts).\n\n0.8.2\n\nThis version introduces experimental support for uncompressed recording (higher quality but much higher file size).  You can switch to uncompressed recording in the Settings menu. It will affect new recordings made in any project.\n\nPlease let us know your feedback, and THANK YOU for all the feedback so far!"</string>
  <string name="project_manager">Project Manager</string>
  <string name="new_session">New Session</string>
  <string name="use_for_sound_widget">use for Sound Recorder Widget recordings</string>
  <string name="warning_erase_project_recordings">This will delete of all of the recordings in the project.\n\nARE YOU SURE YOU WANT TO DO THIS?</string>
  <string name="instructions">Instructions</string>
  <string name="my_new_project">My New Project</string>
  <string name="new_project">New Project</string>
  <string name="download_widget">Download Widget</string>
  <string name="error_market">Could not open the Market to download the Sound Recorder Widget.</string>
  <string name="media_missing">Media Missing</string>
  <string name="media_missing_msg01">Your external media (e.g., sdcard) is not mounted (it is</string>
  <string name="media_missing_msg02">Rehearsal Assistant will not function properly, as it uses external storage for the recorded audio annotation files.</string>
  <string name="stop_session">Stop Session</string>
  <string name="recording_session">Recording Session</string>
  <string name="ringdroid_dl_error">Sorry, I could not start the Market app to download Ringdroid.</string>
  <string name="ringdroid_not_installed">Ringdroid not installed</string>
  <string name="ringdroid_dl_confirm">Click OK to download Ringdroid now.</string>
  <string name="warning_erase_recording">This will permanently delete the recording.\n\nARE YOU SURE YOU WANT TO DO THIS?</string>
  <string name="launch_with_last_project">Launch with Last Project</string>
  <string name="launch_with_last_project_sum">Launch the last opened project (as opposed to the Project Manager)</string>
  <string name="confirm_individual_deletion">Confirm Recording Deletion</string>
  <string name="confirm_individual_deletion_sum">Request confirmation for deletion of individual recordings.</string>
  <string name="recording_waveform">Recorded Audio Waveform</string>
  <string name="recording_waveform_sum">Show audio waveform outline while recording in a Memo project</string>
  <string name="playback_panel_enabled">Playback panel</string>
  <string name="playback_panel_enabled_sum">Show the playback panel when playing back a recording</string>
  <string name="playback_panel_disappears">Auto-close playback panel</string>
  <string name="playback_panel_disappears_sum">Automatically close the playback panel after playback has finished</string>
  <string name="email_detail">E-mail details</string>
  <string name="email_detail_sum">Include recording details (timestamps etc.) when e-mailing recordings</string>
  <string name="set_uncompressed_recording">Record Uncompressed Audio</string>
  <string name="set_uncompressed_recording_sum">Save recordings in uncompressed WAV format.  This takes much more space but provides higher audio quality.  (EXPERIMENTAL FEATURE)</string>
  <string name="email_settings">E-mail</string>
  <string name="email_to_setting">Default Recipient(s)</string>
  <string name="email_to_setting_summary">Default recipient(s) when sending recordings via e-mail. Separate with commas.</string>
  <string name="email_subject_setting">Default Subject</string>
  <string name="email_subject_setting_summary">Default subject when sending recordings via e-mail.</string>
  <string name="recording_quality_settings">Recording Quality</string>
  <string name="screen_bright_wake_lock_setting">Use Screen Bright Wake Lock</string>
  <string name="screen_bright_wake_lock_setting_summary">Prevents changes in screen brightness during recording (avoids glitches).</string>
  <string name="uncompressed_recording_sample_rate">WAV Sample Rate</string>
  <string name="uncompressed_recording_sample_rate_sum">Preferred WAV Sample Rate.</string>
  <string name="zero_playback_time">00:00:00</string>
  <string name="next_recording">Next recording</string>
  <string name="pause">Pause</string>
  <string name="previous_recording">Previous recording</string>
  <string name="title_of_session">Title of session</string>
  <string name="new_project_name">New project name</string>
</resources>