<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="launch_with_last_project"
        android:summary="@string/launch_with_last_project_sum"
        android:title="@string/launch_with_last_project" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="confirm_individual_deletion"
        android:summary="@string/confirm_individual_deletion_sum"
        android:title="@string/confirm_individual_deletion" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="recording_waveform"
        android:summary="@string/recording_waveform_sum"
        android:title="@string/recording_waveform" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:disableDependentsState="false"
        android:key="playback_panel_enabled"
        android:summary="@string/playback_panel_enabled_sum"
        android:title="@string/playback_panel_enabled" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="playback_panel_enabled"
        android:key="playback_panel_disappears"
        android:summary="@string/playback_panel_disappears_sum"
        android:title="@string/playback_panel_disappears" />

    <PreferenceCategory android:title="@string/recording_quality_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="uncompressed_recording"
            android:summary="@string/set_uncompressed_recording_sum"
            android:title="@string/set_uncompressed_recording" />
        <ListPreference
            android:defaultValue="0"
            android:dependency="uncompressed_recording"
            android:entries="@array/sample_rate_strings"
            android:entryValues="@array/sample_rate_values"
            android:key="uncompressed_recording_sample_rate"
            android:summary="@string/uncompressed_recording_sample_rate_sum"
            android:title="@string/uncompressed_recording_sample_rate" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="screen_bright_wake_lock"
            android:summary="@string/screen_bright_wake_lock_setting_summary"
            android:title="@string/screen_bright_wake_lock_setting" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/email_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="email_detail"
            android:summary="@string/email_detail_sum"
            android:title="@string/email_detail" />
        <EditTextPreference
            android:key="email_to"
            android:summary="@string/email_to_setting_summary"
            android:title="@string/email_to_setting" />
        <EditTextPreference
            android:key="email_subject"
            android:summary="@string/email_subject_setting_summary"
            android:title="@string/email_subject_setting" />
    </PreferenceCategory>

</PreferenceScreen> 

