<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/project_title_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:maxLines="1"
        android:hint="@string/new_project_name"/>

    <RadioGroup
        android:id="@+id/project_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp">

        <RadioButton
            android:id="@+id/project_type_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_project" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_project" />
    </RadioGroup>

</LinearLayout>
