<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/record_instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="7dip"
        android:paddingRight="7dip"
        android:text="@string/recording_instructions" />

    <RelativeLayout
        android:id="@+id/current_time_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip">

        <TextView
            android:id="@+id/current_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:gravity="center"
            android:text="@string/zero_playback_time"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textSize="40sp"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/left_record_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/current_time"
            android:layout_alignLeft="@id/current_time"
            android:layout_alignTop="@id/current_time"
            android:layout_marginBottom="6dip"
            android:layout_marginLeft="10dip"
            android:scaleType="center"
            android:src="@drawable/media_recording"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/right_record_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/current_time"
            android:layout_alignRight="@id/current_time"
            android:layout_alignTop="@id/current_time"
            android:layout_marginBottom="6dip"
            android:layout_marginRight="10dip"
            android:scaleType="center"
            android:src="@drawable/media_recording"
            android:visibility="invisible" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/current_time_frame"
        android:layout_below="@id/record_instructions"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip">

        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:text="@string/start_session"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textSize="40sp" />

    </FrameLayout>
</RelativeLayout>
